# spectral

./: Cargo.toml  LICENSE  readme.md  rustfmt.toml
src/: invar.rs  lib.rs  space.rs  struc.rs
src/alg/: arith.rs  mod.rs  mul.rs
src/arch/: mod.rs
src/arch/amx/: about.md  bus.rs  init.rs  load_store.rs  lookup_t.rs  mod.rs  ops.rs  regs.rs
src/arch/simd/: mod.rs
src/space/: matrix.rs  mod.rs  vector.rs
